nav bar animation

--- a/index.html
+++ b/index.html
@@ -162,10 +162,10 @@ c0,9.8-7.9,17.7-17.7,17.7s-17.7-7.9-17.7-17.7V88.7z"
           </button>
         </div>
         <div class="navbar__personal row gap--s ts--body">
-          <button class="personal__item btn--circle-l hover--primary">
+          <button class="personal__item btn--circle-l hover--darker">
             <i class="fa-regular fa-bookmark"></i>
           </button>
-          <button href="#" class="personal__item btn--circle-l hover--primary">
+          <button class="personal__item btn--circle-l hover--darker">
             <i class="fa-regular fa-eye"></i>
           </button>
         </div>
