fix view all component

--- a/insight.html
+++ b/insight.html
@@ -78,10 +78,11 @@
       <template id="viewAll-related">
         <div class="section__title-wrapper row between">
         <p class="section__title">related</p>
-        <button class="viewAll row gap--s hover--lighter" onclick="navigateTo(`/insights?topic={{topic}}`); return false;">
+        <!-- <button class="viewAll row gap--s hover--lighter" onclick="navigateTo(`/insights?topic={{topic}}`); return false;">
           <p class="viewAll__txt ts--btn">view all</p>
           <i class="fa-solid fa-chevron-right ts--body-s"></i>
-        </button>
+        </button> -->
+        <div class="component-viewAll-related"></div>
         </div>
       </template>
       
