saved list markup

--- a/author.html
+++ b/author.html
@@ -13,7 +13,7 @@
             <div class="author__summary row gap--l v-center">
               <img src="{{avatar}}" class="author__summary-avatar" />
               <div class="author__txt col gap--s">
-                <div class="author__name row gap--m">
+                <div class="author__name row gap-m">
                   <h2 class="serif">{{name}}</h2>
                   <button class="author__email icon__wrapper ts--h3 hover--lighter">
                     <i class="fa-regular fa-envelope"></i>
