--- a/index.html
+++ b/index.html
@@ -157,12 +157,13 @@ c0,9.8-7.9,17.7-17.7,17.7s-17.7-7.9-17.7-17.7V88.7z"
           >
             Authors
           </button>
-          <button class="menu__item menu__item--transparent" href="#">
-            Report
-          </button>
+          <button class="menu__item menu__item--transparent">Report</button>
         </div>
         <div class="navbar__personal row gap--s ts--body">
-          <button class="personal__item btn--circle-l hover--darker">
+          <button
+            class="personal__item btn--circle-l hover--darker"
+            onclick="navigateTo(`/saved`); return false;"
+          >
             <i class="fa-regular fa-bookmark"></i>
           </button>
           <button class="personal__item btn--circle-l hover--darker">
