navbar saved button styling

--- a/index.html
+++ b/index.html
@@ -161,13 +161,13 @@ c0,9.8-7.9,17.7-17.7,17.7s-17.7-7.9-17.7-17.7V88.7z"
         </div>
         <div class="navbar__personal row gap--s ts--body">
           <button
-            class="personal__item btn--circle-l hover--darker"
+            class="btn__saved personal__item btn--circle-l"
             onclick="navigateTo(`/saved`); return false;"
           >
-            <i class="fa-regular fa-bookmark"></i>
+            <i class="icon__saved fa-regular fa-bookmark"></i>
           </button>
-          <button class="personal__item btn--circle-l hover--darker">
-            <i class="fa-regular fa-eye"></i>
+          <button class="btn__access personal__item btn--circle-l">
+            <i class="icon__access fa-regular fa-eye"></i>
           </button>
         </div>
       </nav>
