error page markup

--- a/index.html
+++ b/index.html
@@ -150,7 +150,12 @@ c0,9.8-7.9,17.7-17.7,17.7s-17.7-7.9-17.7-17.7V88.7z"
           >
             Insights
           </button>
-          <button class="menu__item menu__item--transparent">Quiz</button>
+          <button
+            class="menu__item menu__item--transparent"
+            onclick="navigateTo(`/error`); return false;"
+          >
+            Quiz
+          </button>
           <button
             class="menu__item menu__item--transparent"
             onclick="navigateTo(`/authors`); return false;"
