--- a/index.html
+++ b/index.html
@@ -62,6 +62,11 @@
     <!-- Load JS files -->
     <script defer type="text/javascript" src="/assets/js/api.js"></script>
     <script defer type="text/javascript" src="/assets/js/util.js"></script>
+    <script
+      defer
+      type="text/javascript"
+      src="/assets/js/eventHandlers.js"
+    ></script>
     <script defer type="text/javascript" src="/assets/js/router.js"></script>
   </head>
 
