add insights bookmark event

--- a/insights.html
+++ b/insights.html
@@ -41,7 +41,7 @@
                 onclick="navigateTo(`/insights/{{id}}`); return false;"
               >
                 <img src="{{thumbnail}}" />
-                <div class="component-bookmark-add"></div>
+                <div class="component-bookmark-add" data-id="{{id}}"></div>
               </div>
               <div class="insights__txt col gap--s v-center">
                 <div class="insights__topic">
