--- a/main.html
+++ b/main.html
@@ -461,9 +461,9 @@
     </section>
 
     <!-- Section: explore -->
-    <section id="explore" class="container--m row gap--m">
+    <ul id="explore" class="container--m row gap--m">
       <!-- Inspirations -->
-      <div id="inspirations" class="aside__box col gap--m container--s">
+      <li id="inspirations" class="aside__box col gap--m container--s">
         <div class="section__title-wrapper row between">
           <p class="section__title">inspirations</p>
           <button
@@ -485,10 +485,10 @@
             {{/each}}
           </template>
         </ul>
-      </div>
+      </li>
 
       <!-- The latest -->
-      <div id="latest" class="aside__box col gap--m container--s">
+      <li id="latest" class="aside__box col gap--m container--s">
         <div class="section__title-wrapper row between">
           <p class="section__title">the latest</p>
           <div class="component-viewAll-insights"></div>
@@ -545,10 +545,10 @@
             {{/each}}
           </template>
         </ul>
-      </div>
+      </li>
 
       <!-- Aside -->
-      <div class="explore__aside col gap--m">
+      <li class="explore__aside col gap--m">
         <!-- Fatured Authors -->
         <div id="featured-authors" class="aside__box col gap--m container--s">
           <div class="section__title-wrapper">
@@ -599,8 +599,8 @@
             <img src="/assets/image/ad.webp" />
           </a>
         </div>
-      </div>
-    </section>
+      </li>
+    </ul>
 
     <!-- Section: Video -->
     <section id="video" class="col gap--m container--m">
