--- a/index.html
+++ b/index.html
@@ -213,7 +213,12 @@ c0,9.8-7.9,17.7-17.7,17.7s-17.7-7.9-17.7-17.7V88.7z"
           >
             Authors
           </button>
-          <button class="menu__item menu__item--transparent">Report</button>
+          <button
+            class="menu__item menu__item--transparent"
+            onclick="navigateTo(`/report`); return false;"
+          >
+            Report
+          </button>
         </div>
         <div class="navbar__personal row gap--s ts--body">
           <button
