--- a/index.html
+++ b/index.html
@@ -56,18 +56,18 @@
     <script
       defer
       type="text/javascript"
-      src="/assets/plugins/handlebars/handlebars.min.js"
+      src="assets/plugins/handlebars/handlebars.min.js"
     ></script>
 
     <!-- Load JS files -->
-    <script defer type="text/javascript" src="/assets/js/api.js"></script>
-    <script defer type="text/javascript" src="/assets/js/util.js"></script>
+    <script defer type="text/javascript" src="assets/js/api.js"></script>
+    <script defer type="text/javascript" src="assets/js/util.js"></script>
     <script
       defer
       type="text/javascript"
-      src="/assets/js/eventHandlers.js"
+      src="assets/js/eventHandlers.js"
     ></script>
-    <script defer type="text/javascript" src="/assets/js/router.js"></script>
+    <script defer type="text/javascript" src="assets/js/router.js"></script>
   </head>
 
   <body>
