--- a/index.html
+++ b/index.html
@@ -45,12 +45,12 @@
     /> -->
 
     <!-- Custom CSS Files -->
-    <link rel="stylesheet" href="/assets/css/reset.css" />
-    <link rel="stylesheet" href="/assets/css/variables.css" />
-    <link rel="stylesheet" href="/assets/css/reusable-utils.css" />
-    <link rel="stylesheet" href="/assets/css/reusable-elements.css" />
-    <link rel="stylesheet" href="/assets/css/specific.css" />
-    <link rel="stylesheet" href="/assets/css/responsive.css" />
+    <link rel="stylesheet" href="assets/css/reset.css" />
+    <link rel="stylesheet" href="assets/css/variables.css" />
+    <link rel="stylesheet" href="assets/css/reusable-utils.css" />
+    <link rel="stylesheet" href="assets/css/reusable-elements.css" />
+    <link rel="stylesheet" href="assets/css/specific.css" />
+    <link rel="stylesheet" href="assets/css/responsive.css" />
 
     <!-- Handlebars from a CDN -->
     <script
