--- a/index.html
+++ b/index.html
@@ -198,7 +198,7 @@ c0,9.8-7.9,17.7-17.7,17.7s-17.7-7.9-17.7-17.7V88.7z"
     <header id="header">
       <nav class="navbar__wrapper navbar__wrapper--transparent">
         <p onclick="handleRouteChange('/'); return true;">
-          <img class="navbar__logo logo--white" src="/assets/image/logo.png" />
+          <img class="navbar__logo logo--white" src="assets/image/logo.png" />
         </p>
         <div class="navbar__menu row gap--l tc--white">
           <button
