--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
       content="magazine architecture webzine insights design news"
     />
     <meta name="author" content="Hyunjung Joun" />
+    <meta http-equiv="Permissions-Policy" content="interest-cohort=()" />
 
     <!-- Title -->
     <title>ArchOn Magazine</title>
