--- a/index.html
+++ b/index.html
@@ -42,33 +42,33 @@
     <!-- Bootstrap CSS -->
     <!-- <link
       rel="stylesheet"
-      href="assets/plugins/bootstrap/css/bootstrap.min.css"
+      href=".assets/plugins/bootstrap/css/bootstrap.min.css"
     /> -->
 
     <!-- Custom CSS Files -->
-    <link rel="stylesheet" href="assets/css/reset.css" />
-    <link rel="stylesheet" href="assets/css/variables.css" />
-    <link rel="stylesheet" href="assets/css/reusable-utils.css" />
-    <link rel="stylesheet" href="assets/css/reusable-elements.css" />
-    <link rel="stylesheet" href="assets/css/specific.css" />
-    <link rel="stylesheet" href="assets/css/responsive.css" />
+    <link rel="stylesheet" href="./assets/css/reset.css" />
+    <link rel="stylesheet" href="./assets/css/variables.css" />
+    <link rel="stylesheet" href="./assets/css/reusable-utils.css" />
+    <link rel="stylesheet" href="./assets/css/reusable-elements.css" />
+    <link rel="stylesheet" href="./assets/css/specific.css" />
+    <link rel="stylesheet" href="./assets/css/responsive.css" />
 
     <!-- Handlebars from a CDN -->
     <script
       defer
       type="text/javascript"
-      src="assets/plugins/handlebars/handlebars.min.js"
+      src="./assets/plugins/handlebars/handlebars.min.js"
     ></script>
 
     <!-- Load JS files -->
-    <script defer type="text/javascript" src="assets/js/api.js"></script>
-    <script defer type="text/javascript" src="assets/js/util.js"></script>
+    <script defer type="text/javascript" src="./assets/js/api.js"></script>
+    <script defer type="text/javascript" src="./assets/js/util.js"></script>
     <script
       defer
       type="text/javascript"
-      src="assets/js/eventHandlers.js"
+      src="./assets/js/eventHandlers.js"
     ></script>
-    <script defer type="text/javascript" src="assets/js/router.js"></script>
+    <script defer type="text/javascript" src="./assets/js/router.js"></script>
   </head>
 
   <body>
@@ -199,7 +199,7 @@ c0,9.8-7.9,17.7-17.7,17.7s-17.7-7.9-17.7-17.7V88.7z"
     <header id="header">
       <nav class="navbar__wrapper navbar__wrapper--transparent">
         <p onclick="handleRouteChange('/'); return true;">
-          <img class="navbar__logo logo--white" src="assets/image/logo.png" />
+          <img class="navbar__logo logo--white" src="./assets/image/logo.png" />
         </p>
         <div class="navbar__menu row gap--l tc--white">
           <button
@@ -241,7 +241,7 @@ c0,9.8-7.9,17.7-17.7,17.7s-17.7-7.9-17.7-17.7V88.7z"
     <div id="footer" class="col container--m">
       <div class="footer__sitemap row gap--m">
         <div class="footer__logo col gap--m">
-          <img class="footer__logo-img" src="assets/image/logo.png" />
+          <img class="footer__logo-img" src="./assets/image/logo.png" />
           <p class="footer__welcome bold">
             Welcome to ArchOn - Where Imagination Builds
           </p>
